@@ -26,7 +26,7 @@ div.fullpage {
 
 /* Index */
 
-h2#workflow_management {
+h2#workflow_management, h2#copy_options {
    font-variant: small-caps;
    text-decoration: underline;
 }
